--- a/packages/frontend/src/global.css
+++ b/packages/frontend/src/global.css
@@ -18,6 +18,20 @@
     grid-area: right;
 }
 
+.scrollbar-none {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.scrollbar-none::-webkit-scrollbar {
+    display: none;
+}
+
+.shadow-horizontal-scroller {
+    box-shadow: inset 10px 0 10px var(--tw-shadow-color),
+        inset -10px 0 10px var(--tw-shadow-color);
+}
+
 @media (min-width: 600px) {
     .grid-area-hero {
         grid-template-areas: "left right-top right-top" "left right right" "left right right";
