--- a/packages/ui/src/global.css
+++ b/packages/ui/src/global.css
@@ -15,7 +15,7 @@
 }
 
 @layer components {
-    .cui-switch {
+    button.cui-switch {
         @apply cui-relative cui-inline-block cui-align-middle;
         @apply cui-w-10 cui-h-5 cui-leading-5;
         @apply cui-bg-gray-300 dark:cui-bg-gray-500;
@@ -24,7 +24,7 @@
         @apply cui-overflow-hidden;
     }
 
-    .cui-switch:after {
+    button.cui-switch:after {
         @apply cui-absolute;
         @apply cui-w-3 cui-h-3;
         @apply cui-top-1;
@@ -35,20 +35,20 @@
         content: "";
     }
 
-    .cui-switch.cui-switch-checked {
+    button.cui-switch.cui-switch-checked {
         @apply cui-bg-green;
     }
 
-    .cui-switch.cui-switch-checked:after {
+    button.cui-switch.cui-switch-checked:after {
         @apply cui-left-6;
     }
 
-    .cui-switch.cui-switch-disabled {
+    button.cui-switch.cui-switch-disabled {
         @apply cui-cursor-no-drop;
         @apply cui-bg-gray-200 dark:cui-bg-gray-700;
     }
 
-    .cui-switch.cui-switch-disabled:after {
+    button.cui-switch.cui-switch-disabled:after {
         @apply cui-cursor-no-drop;
         @apply cui-bg-gray-500 dark:cui-bg-black;
     }
