--- a/packages/frontend/src/global.css
+++ b/packages/frontend/src/global.css
@@ -2,6 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+    .bg-grid-light {
+        @apply bg-center;
+        @apply bg-2 md:bg-4;
+        @apply bg-black-squares;
+    }
+
+    .bg-grid-dark {
+        @apply bg-center;
+        @apply bg-2 md:bg-4;
+        @apply bg-white-squares;
+    }
+}
+
+body {
+    overflow-x: hidden;
+}
+
 .grid-area-hero {
     grid-template-areas: "right-top" "left" "right";
 }
