feat(ui): add explicit black border where needed and remove scrollbar in date time input

--- a/packages/ui/src/global.css
+++ b/packages/ui/src/global.css
@@ -53,3 +53,12 @@
         @apply cui-bg-gray-500 dark:cui-bg-black;
     }
 }
+
+.scrollbar-none {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.scrollbar-none::-webkit-scrollbar {
+    display: none;
+}
